@@ -26,7 +26,9 @@
       This does not apply to the deprecated versions of these methods.
 
     - Created a convenience method $pdf->font, which combines corefont, ttfont,
-      psfont, and bdfont.  The type-specific methods have not been deprecated.
+      psfont, and bdfont.  The type-specific methods have *not* been deprecated.
+      Unlike corefont, font requires the exact name of one of the standard
+      fonts.
 
     - Tentatively deprecated $pdf->cjkfont.  If you're successfully using this
       method for CJK font support, read PDF::API2::Resource::CIDFont::CJKFont
